Commit incorporating code review comments

--- a/local.properties
+++ b/local.properties
@@ -6,4 +6,4 @@
 # header note.
 #Sat Dec 26 22:32:02 EST 2020
 sdk.dir=C\:\\dev\\mobile\\tools\\installed\\android_sdks
-apiKey = vkYXEwFM6pn1RCHeRLjnangdwDt2rY5XxqauSJVg
+apiKey =
